Upgrade Spring Boot to 3.1.0